--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     </head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guide Stratégique State of Survival</title>
+    <title>Le Guide de La Main Noire</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRyXhtM9d-a9cAI5ziYTWXh_DFiV_GoKTWjtQ&s"> </head>
 <body>
     <header>
-        <h1>Bienvenue sur le Guide Stratégique State of Survival</h1>
+        <h1>Bienvenue sur Le Guide de La Main Noire</h1>
         <p>Votre ressource pour progresser dans le jeu !</p>
     </header>
 
